--- a/trunk/config/resources.cfg
+++ b/trunk/config/resources.cfg
@@ -5,6 +5,7 @@ Zip=../../../Samples/Media/packs/OgreCore.zip
 
 # Resource locations to be added to the default path
 [General]
+FileSystem=Media
 FileSystem=../../../Samples/Media
 FileSystem=../../../Samples/Media/fonts
 FileSystem=../../../Samples/Media/materials/programs
