--- a/trunk/Media/terrain.cfg
+++ b/trunk/Media/terrain.cfg
@@ -3,7 +3,8 @@
 #WorldTexture=/Users/robs/src/OgreSDK/Arctic-Explorer/Media/materials/textures/terr_dirt-grass.jpg
 
 # The detail texture (if you wish the terrain manager to create a material for you)
-#DetailTexture=/Users/robs/src/OgreSDK/Arctic-Explorer/Media/materials/textures/terrain_detail.jpg
+# DetailTexture=/Users/robs/src/OgreSDK/Arctic-Explorer/Media/materials/textures/terrain_detail.jpg
+DetailTexture=terrain_detail.jpg
 
 #number of times the detail texture will tile in a terrain tile
 #DetailTile=0
@@ -14,7 +15,9 @@ PageSource=Heightmap
 # Heightmap-source specific settings
 # Heightmap.image=/Users/robs/src/OgreSDK/Arctic-Explorer/Media/materials/textures/terrain.png
 # Heightmap.image=/Users/robs/src/OgreSDK/Arctic-Explorer/Media/materials/textures/terrain_robs.png
-Heightmap.image=/Users/robs/src/OgreSDK/Arctic-Explorer/Media/materials/textures/512_big_pc.raw
+# Heightmap.image=/Users/robs/src/OgreSDK/Arctic-Explorer/Media/materials/textures/512_big_pc.raw
+Heightmap.image=512_big_pc.raw
+
 
 # If you use RAW, fill in the below too
 # RAW-specific setting - size (horizontal/vertical)
@@ -70,6 +73,6 @@ LODMorphStart=0.2
 #MorphLODFactorParamIndex=4
 
 # The name of the material you will define to shade the terrain
-#CustomMaterialName=TestTerrainMaterial
+CustomMaterialName=RobsSnowMaterial
 
 
