--- a/trunk/config/resources.cfg
+++ b/trunk/config/resources.cfg
@@ -1,26 +1,45 @@
 # Resource locations to be added to the 'boostrap' path
 # This also contains the minimum you need to use the Ogre example framework
 [Bootstrap]
-Zip=../../../Samples/Media/packs/OgreCore.zip
+#Zip=../../../Samples/Media/packs/OgreCore.zip
+Zip=../../../Arctic-Explorer/Media/packs/OgreCore.zip
 
 # Resource locations to be added to the default path
 [General]
-FileSystem=Media
-FileSystem=../../../Samples/Media
-FileSystem=../../../Samples/Media/fonts
-FileSystem=../../../Samples/Media/materials/programs
-FileSystem=../../../Samples/Media/materials/scripts
-FileSystem=../../../Samples/Media/materials/textures
-FileSystem=../../../Samples/Media/models
-FileSystem=../../../Samples/Media/overlays
-FileSystem=../../../Samples/Media/particle
-FileSystem=../../../Samples/Media/gui
-FileSystem=../../../Samples/Media/DeferredShadingMedia
-Zip=../../../Samples/Media/packs/cubemap.zip
-Zip=../../../Samples/Media/packs/cubemapsJS.zip
-Zip=../../../Samples/Media/packs/dragon.zip
-Zip=../../../Samples/Media/packs/fresneldemo.zip
-Zip=../../../Samples/Media/packs/ogretestmap.zip
-Zip=../../../Samples/Media/packs/skybox.zip
+FileSystem=../../../Arctic-Explorer/Media
+FileSystem=../../../Arctic-Explorer/Media/fonts
+FileSystem=../../../Arctic-Explorer/Media/materials/programs
+FileSystem=../../../Arctic-Explorer/Media/materials/scripts
+FileSystem=../../../Arctic-Explorer/Media/materials/textures
+FileSystem=../../../Arctic-Explorer/Media/models
+FileSystem=../../../Arctic-Explorer/Media/overlays
+FileSystem=../../../Arctic-Explorer/Media/particle
+FileSystem=../../../Arctic-Explorer/Media/gui
+FileSystem=../../../Arctic-Explorer/Media/DeferredShadingMedia
+
+Zip=../../../Arctic-Explorer/Media/packs/cubemap.zip
+Zip=../../../Arctic-Explorer/Media/packs/cubemapsJS.zip
+Zip=../../../Arctic-Explorer/Media/packs/dragon.zip
+Zip=../../../Arctic-Explorer/Media/packs/fresneldemo.zip
+Zip=../../../Arctic-Explorer/Media/packs/ogretestmap.zip
+Zip=../../../Arctic-Explorer/Media/packs/skybox.zip
+
+#FileSystem=../../../Samples/Media
+#FileSystem=../../../Samples/Media/fonts
+#FileSystem=../../../Samples/Media/materials/programs
+#FileSystem=../../../Samples/Media/materials/scripts
+#FileSystem=../../../Samples/Media/materials/textures
+#FileSystem=../../../Samples/Media/models
+#FileSystem=../../../Samples/Media/overlays
+#FileSystem=../../../Samples/Media/particle
+#FileSystem=../../../Samples/Media/gui
+#FileSystem=../../../Samples/Media/DeferredShadingMedia
+
+#Zip=../../../Samples/Media/packs/cubemap.zip
+#Zip=../../../Samples/Media/packs/cubemapsJS.zip
+#Zip=../../../Samples/Media/packs/dragon.zip
+#Zip=../../../Samples/Media/packs/fresneldemo.zip
+#Zip=../../../Samples/Media/packs/ogretestmap.zip
+#Zip=../../../Samples/Media/packs/skybox.zip
 
 
