--- a/trunk/ArcExMedia/terrain.cfg
+++ b/trunk/ArcExMedia/terrain.cfg
@@ -4,7 +4,7 @@
 
 # The detail texture (if you wish the terrain manager to create a material for you)
 # DetailTexture=/Users/robs/src/OgreSDK/Arctic-Explorer/Media/materials/textures/terrain_detail.jpg
-DetailTexture=terrain_detail.jpg
+# DetailTexture=terrain_detail.jpg
 
 #number of times the detail texture will tile in a terrain tile
 #DetailTile=0
@@ -73,6 +73,6 @@ LODMorphStart=0.2
 #MorphLODFactorParamIndex=4
 
 # The name of the material you will define to shade the terrain
-CustomMaterialName=RobsSnowMaterial
+#CustomMaterialName=RobsSnowMaterial
 
 
