--- a/config/resources.cfg
+++ b/config/resources.cfg
@@ -2,30 +2,12 @@
 # This also contains the minimum you need to use the Ogre example framework
 [Bootstrap]
 Zip=../../../Samples/Media/packs/OgreCore.zip
-#Zip=../../../Arctic-Explorer/Media/packs/OgreCore.zip
 
 # Resource locations to be added to the default path
 [General]
 
+# Rob and Mel - place your media here.
 FileSystem=../../../Arctic-Explorer/ArcExMedia
-
-#FileSystem=../../../Arctic-Explorer/Media
-#FileSystem=../../../Arctic-Explorer/Media/fonts
-#FileSystem=../../../Arctic-Explorer/Media/materials/programs
-#FileSystem=../../../Arctic-Explorer/Media/materials/scripts
-#FileSystem=../../../Arctic-Explorer/Media/materials/textures
-#FileSystem=../../../Arctic-Explorer/Media/models
-#FileSystem=../../../Arctic-Explorer/Media/overlays
-#FileSystem=../../../Arctic-Explorer/Media/particle
-#FileSystem=../../../Arctic-Explorer/Media/gui
-#FileSystem=../../../Arctic-Explorer/Media/DeferredShadingMedia
-
-#Zip=../../../Arctic-Explorer/Media/packs/cubemap.zip
-#Zip=../../../Arctic-Explorer/Media/packs/cubemapsJS.zip
-#Zip=../../../Arctic-Explorer/Media/packs/dragon.zip
-#Zip=../../../Arctic-Explorer/Media/packs/fresneldemo.zip
-#Zip=../../../Arctic-Explorer/Media/packs/ogretestmap.zip
-#Zip=../../../Arctic-Explorer/Media/packs/skybox.zip
 
 FileSystem=../../../Samples/Media
 FileSystem=../../../Samples/Media/fonts
