--- a/trunk/ArcExMedia/arcex_terrain.cfg
+++ b/trunk/ArcExMedia/arcex_terrain.cfg
@@ -39,13 +39,13 @@ MaxPixelError=3
 PageWorldX=3000
 PageWorldZ=3000
 # Maximum height of the terrain 
-MaxHeight=500
+MaxHeight=300
 
 # Upper LOD limit
 MaxMipMapLevel=5
 
-#VertexNormals=yes
-#VertexColors=yes
+VertexNormals=yes
+VertexColors=yes
 #UseTriStrips=yes
 
 # Use vertex program to morph LODs, if available
@@ -73,6 +73,6 @@ LODMorphStart=0.2
 #MorphLODFactorParamIndex=4
 
 # The name of the material you will define to shade the terrain
-#CustomMaterialName=RobsSnowMaterial
+CustomMaterialName=RobsSnowMaterial
 
 
