--- a/trunk/config/resources.cfg
+++ b/trunk/config/resources.cfg
@@ -8,6 +8,9 @@ Zip=../../../Samples/Media/packs/OgreCore.zip
 
 # Rob and Mel - place your media here.
 FileSystem=../../../Arctic-Explorer/ArcExMedia
+FileSystem=../../../Arctic-Explorer/ArcExMedia/particle
+FileSystem=../../../Arctic-Explorer/ArcExMedia/materials
+FileSystem=../../../Arctic-Explorer/ArcExMedia/textures
 
 FileSystem=../../../Samples/Media
 FileSystem=../../../Samples/Media/fonts
