--- a/trunk/ArcExMedia/arcex_terrain.cfg
+++ b/trunk/ArcExMedia/arcex_terrain.cfg
@@ -16,7 +16,7 @@ PageSource=Heightmap
 # Heightmap.image=/Users/robs/src/OgreSDK/Arctic-Explorer/Media/materials/textures/terrain.png
 # Heightmap.image=/Users/robs/src/OgreSDK/Arctic-Explorer/Media/materials/textures/terrain_robs.png
 # Heightmap.image=/Users/robs/src/OgreSDK/Arctic-Explorer/Media/materials/textures/512_big_pc.raw
-Heightmap.image=512_big_pc.raw
+Heightmap.image=512_small_pc.raw
 
 
 # If you use RAW, fill in the below too
